@@ -62,8 +62,6 @@ void PortTablesFree(rule_port_tables_t *);
 
 void parser_append_rules(const char*);
 
-int GetRuleProtocol(const char *);
-
 void ConfigureSideChannelModules(SnortConfig *);
 
 NORETURN void ParseAbort(const char *, ...);
